--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-type-animation": "^2.1.2"
   },
   "devDependencies": {
+    "@types/node": "^18.14.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
